[package]
name = "rh-trojan-client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
rustsourcebundler = { git = "https://github.com/lpenz/rust-sourcebundler" }

[dependencies]
walkdir = "2"
zip_archive = "1.2.2"
tungstenite = "0.18.0"
serde_json = "1.0.91"
url = "2.3.1"
websocket = "0.26.5"
flate2 = "1.0.25"
sysinfo = "0.27.1"
json = "0.12.4"
whoami = "1.2.3"
local-ip-address = "0.4.9"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]