[package]
name = "rh-trojan-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip_archive = "1.2.2"
tungstenite = "0.18.0"
serde_json = "1.0.91"
url = "2.3.1"
websocket = "0.26.5"
chrono = "0.4.23"
json = "0.12.4"
